add loader in select component

--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -56,6 +56,9 @@ div.v-selectpage
       span
         margin-right 26px
         margin-left 5px
+    div.sp-input-loading
+      pointer-events none
+      opacity: .5
     div.sp-inputs
       padding 1px 24px 1px 1px
       position relative
