--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -285,6 +285,8 @@ div.v-select-container-loading
     z-index 2
     content "\f013"
     animation: fa-spin 1.75s infinite linear;
+div.sp-result-without-search
+    margin-top 10px
 div.sp-result-area
   background-color white
   min-width 240px
