--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -52,6 +52,7 @@ div.v-selectpage
       background-color white
       cursor pointer
       color #333
+      padding-right 40px
       opacity 1
       span
         margin-right 26px
