--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -290,8 +290,9 @@ div.sp-result-without-search
     margin-top 10px
 div.sp-result-area
   background-color white
-  min-width 240px
+  min-width 238px
   max-height 320px
+  overflow-x hidden
   overflow-y auto
   font-family fonts
   ul.sp-results
@@ -357,7 +358,6 @@ div.sp-result-area
       text-align right
 div.sp-pagination
   border-top 1px solid #eceef1
-  margin-top 7px
   font-family fonts
   padding 0
   background-color #f8f9fa
