--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -87,10 +87,11 @@ div.v-selectpage
         margin 2px
         padding-left 5px
         z-index 0
-        button
+        div.tag-close
           display: inline-flex;
           border none
           fill #ff9393
+          margin 5px
           &:hover
             fill #fd6b6b
             font-weight bold
@@ -370,7 +371,7 @@ div.sp-pagination
     height 31px
     line-height 28px
     font-weight 400
-    color #333 
+    color #333
   ul
     position absolute
     top 0
