--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -83,15 +83,15 @@ div.v-selectpage
         border 1px solid #f0f0f0
         border-radius 4px
         color #333
-        line-height 1.5
         margin 2px
-        padding-left 5px
+        padding 2px 4px 2px 4px
+        font-size 15px
         z-index 0
         div.tag-close
-          display: inline-flex;
+          display inline-flex
           border none
           fill #ff9393
-          margin 5px
+          margin-left 5px
           &:hover
             fill #fd6b6b
             font-weight bold
