--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -61,7 +61,7 @@ div.v-selectpage
       pointer-events none
       opacity: .5
       span
-        display none !important
+        //display none !important
     div.sp-inputs
       padding 1px 24px 1px 1px
       position relative
