--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -84,7 +84,7 @@ div.v-selectpage
         border-radius 4px
         color #333
         margin 2px
-        padding 2px 4px 2px 4px
+        padding 0 4px
         font-size 15px
         z-index 0
         div.tag-close
