--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -83,8 +83,8 @@ div.v-selectpage
         border 1px solid #f0f0f0
         border-radius 4px
         color #333
-        margin 2px
-        padding 0 4px
+        margin 1px
+        padding 1px 0.25em
         font-size 15px
         z-index 0
         div.tag-close
