--- a/src/styles/selectpage.styl
+++ b/src/styles/selectpage.styl
@@ -76,7 +76,7 @@ div.v-selectpage
         margin-top 3px
         display inline-block
       span.sp-selected-tag
-        display inline-block
+        display inline-flex
         align-items center
         background-color #f0f0f0
         border 1px solid #f0f0f0
@@ -86,10 +86,12 @@ div.v-selectpage
         padding 1px 0.25em
         font-size 15px
         z-index 0
+        word-break break-word
         div.tag-close
           display inline-flex
           border none
           fill #ff9393
+          margin-top 1px
           margin-left 5px
           &:hover
             fill #fd6b6b
