--- a/src/styles/common.sass
+++ b/src/styles/common.sass
@@ -53,12 +53,12 @@
   justify-content: center
   align-items: center
   cursor: pointer
-  color: #aaa
+  color: #ff9393
   // background-color: transparent
   transition: all .3s ease
   border-radius: 50%
   &:hover
-    color: black
+    color: #fd6b6b
     // background-color: #f1f1f1
   // .sp-circle-btn.sp-circle-btn-disabled
   &#{&}--disabled,
