--- a/src/styles/trigger.sass
+++ b/src/styles/trigger.sass
@@ -1,9 +1,10 @@
 .sp-trigger-container
   display: flex
   align-items: center
+  min-height: 31px
   justify-content: space-between
   flex-grow: 1
-  padding: 6px 12px 6px 6px
+  padding: 2px 5px 2px 2px
   background-color: white
   border: 1px solid #ddd
   border-radius: .3rem
@@ -34,7 +35,7 @@
     transition: transform .2s ease
     margin-left: .5rem
     font-size: 1rem
-    color: #666
+    color: #a7a7a7
   &.sp-opened
     box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.3)
     border: 1px solid #666
@@ -59,19 +60,18 @@
         line-height: 1.143
         color: #666
     &.sp-chips
-      gap: .5rem
+      gap: 2px
     .sp-chip
-      border-radius: .3rem
-      background-color: #eee
-      color: #666
+      font-size: 15px
+      border-radius: 4px
+      background-color: #ebeef2
+      border-color: #ebeef2
+      color: #333
       display: inline-flex
       align-items: center
-      padding: 5px 7px
+      padding: 2px 2px 2px 5px
       transition: all .2s ease
       &--body
         display: inline-flex
-        line-height: 1.143
+        line-height: 1.4
         margin-right: 5px
-      &:hover
-        background-color: #f7f7f7
-        color: black
