--- a/src/styles/trigger.sass
+++ b/src/styles/trigger.sass
@@ -4,11 +4,11 @@
   min-height: 31px
   justify-content: space-between
   flex-grow: 1
-  padding: 2px 5px 2px 2px
+  padding: 0 5px 0 3px
   background-color: white
   border: 1px solid #ddd
   border-radius: .3rem
-  font-size: 14px
+  font-size: 15px
   line-height: 1.42857143
   outline: 0 !important
   // color: #666
@@ -33,9 +33,9 @@
       color: #666 !important
   .bi-chevron-down
     transition: transform .2s ease
-    margin-left: .5rem
+    margin-left: .1rem
     font-size: 1rem
-    color: #a7a7a7
+    color: #9d9d9d
   &.sp-opened
     box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.3)
     border: 1px solid #666
@@ -58,7 +58,7 @@
       .sp-select-content
         padding: 5px
         line-height: 1.143
-        color: #666
+        color: #333
     &.sp-chips
       gap: 2px
     .sp-chip
@@ -69,7 +69,7 @@
       color: #333
       display: inline-flex
       align-items: center
-      padding: 2px 2px 2px 5px
+      padding: 2px 0 2px 5px
       transition: all .2s ease
       &--body
         display: inline-flex
