--- a/src/styles/pagination.sass
+++ b/src/styles/pagination.sass
@@ -1,15 +1,18 @@
 .sp-pagination
   display: flex
+  border-top: 1px solid #eceef1
+  background-color: #f8f9fa
   justify-content: space-between
+  margin-top: 5px
   align-items: center
   // border-top: 1px solid #eee
   // margin-top: 5px
   // background-color: #f7f7f7
-  padding: 5px 10px
+  padding: 2px 10px
   .sp-page-info
     line-height: 1
     // color: #bbb
-    color: rgba(0, 0, 0, 0.3)
+    color: rgba(0, 0, 0, 0.6)
     font-size: 14px
     margin-right: 10px
   .sp-page-control
