--- a/src/styles/search.sass
+++ b/src/styles/search.sass
@@ -1,8 +1,10 @@
 .sp-search
   display: flex
   align-items: center
+  border-bottom: 1px solid #eceef1
+  margin-bottom: 5px
   // margin: 10px
-  padding: .5rem 0
+  padding: 5px 0 3px 0
   transition: all .3s ease
   // border-bottom: 1px solid #eee
   // background-color: rgba(200, 200, 200, .1)
@@ -64,4 +66,8 @@
     display: inline-flex
     transition: all .3s ease
     padding: 0 0.5rem
+
+    .sp-circle-btn--disabled
+      display: none
+
     // border-left: 1px solid #eee
