--- a/src/styles/trigger.sass
+++ b/src/styles/trigger.sass
@@ -4,7 +4,7 @@
   min-height: 31px
   justify-content: space-between
   flex-grow: 1
-  padding: 0 5px 0 3px
+  padding: 2px 5px 2px 2px
   background-color: white
   border: 1px solid #ddd
   border-radius: .3rem
@@ -56,7 +56,7 @@
       justify-content: space-between
       flex-grow: 1
       .sp-select-content
-        padding: 5px
+        padding: 3px 6px
         line-height: 1.143
         color: #333
     &.sp-chips
