--- a/src/styles/trigger.sass
+++ b/src/styles/trigger.sass
@@ -33,9 +33,12 @@
       color: #666 !important
   .bi-chevron-down
     transition: transform .2s ease
-    margin-left: .1rem
-    font-size: 1rem
+    font-size: 15px
     color: #9d9d9d
+    margin-left: 8px
+  &.sp-single
+    .bi-chevron-down
+     margin-left: 2px !important
   &.sp-opened
     box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.3)
     border: 1px solid #666
