--- a/src/styles/common.sass
+++ b/src/styles/common.sass
@@ -38,8 +38,8 @@
   opacity: 1
 
 .sp-icon
-  width: 1em
-  height: 1em
+  width: 16px
+  height: 16px
   &.sp-icon-small
     font-size: 1rem
   &.sp-icon-medium
