--- a/src/styles/pagination.sass
+++ b/src/styles/pagination.sass
@@ -9,6 +9,8 @@
   // margin-top: 5px
   // background-color: #f7f7f7
   padding: 2px 10px
+  &.d-none
+    display: none
   .sp-page-info
     line-height: 1
     // color: #bbb
